--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Krill Life Parammetrs estimation in a context spatial in WAP"
 subtitle: "Supporting analysis to incorporate in Krill stock assessment frameworks"
 author: "Mardones, M; Cárdenas, C."
 date:  "`r format(Sys.time(), '%d %B, %Y')`"
-bibliography: seaice.bib
+bibliography: param.bib
 csl: apa.csl
 link-citations: yes
 linkcolor: blue
@@ -33,6 +33,8 @@ knitr::opts_chunk$set(echo = TRUE,
                       message = FALSE,
                       warning = FALSE,
                       fig.align = 'center',
+                      fig.width = 8,
+                      fig.height = 6,
                       dev = 'jpeg',
                       dpi = 300)
 #XQuartz is a mess, put this in your onload to default to cairo instead
@@ -47,6 +49,8 @@ options(bitmapType = "cairo")
 library(here)
 library(kableExtra)
 library(ggthemes)
+library(ggrepel)
+library(ggridges)
 #analisis
 library(ggpubr)
 library(easystats) # multiples unciones analiticas
@@ -55,6 +59,8 @@ library(tidyverse, quietly = TRUE)
 library(modelsummary)
 library(terra) # replace raster
 library(TropFishR)
+library(mixR)
+library(CCAMLRGIS)
 ```
 
 # Background
@@ -83,11 +89,7 @@ metadata <- load("~/DOCAS/Data/565_C1_KRI_2021-10-01/DATA_PRODUCT_565.RData")
 meta <- get("METADATA")
 c1 <- get("C1")
 ohbio <- get("OBS_HAUL_BIOLOGY")
-names(ohbio)
-dim(c1)
-dim(ohbio)
 ```
-
 
 Join data set with master as `c1` set. This join is trought
 `obs_haul_id` variable to get geoposition variables
@@ -113,44 +115,11 @@ ohbio3 <- ohbio2 %>%
 Save data further analysis
 ```{r}
 length481 <-ohbio3 %>% 
-  dplyr::select(7, 9, 11, 12, 14, 24, 25, 29, 42, 44, 46, 47, 43, 45) %>% 
-  filter(asd_code=="481")
-summary(length481)  
+  dplyr::select(7, 9, 11, 12, 14, 24, 25, 29, 42, 44, 46, 47, 43, 45) |>   filter(asd_code=="481")
 #save(length481, file = "length481.RData")
 ```
 
-Filter data regarding to previous glances. Follow with a quick glimpse
-to all 48 subarea length composition from monitoring fisheries (Figure
-\@ref(fig:lenthtrwal)).
 
-```{r lenthtrwal, message=F, warning=F, fig.cap="Krill length by Trawl technique"}
-
-jz <- ggplot(length481 %>% 
-               dplyr::filter(Year>2000),
-             aes(x=length_total_cm, 
-                 y = as.factor(Month), 
-                 fill=asd_code))+
-  #geom_joy(alpha=0.9) +
-  geom_density_ridges(stat = "binline", bins = 50, 
-                      scale = 1.8, 
-                      draw_baseline = FALSE,
-                      alpha=0.8)+
-  facet_wrap(Year~.) +   
-  geom_vline(xintercept = 3.6, color = "red")+
-  scale_x_continuous(breaks = seq(from = 1, to = 10, 
-                                  by = 1))+
-  scale_y_discrete(breaks = seq(from = 2000, 
-                                to = 2020, by = 1))+
-  scale_fill_viridis_d(name="SubArea",
-                       option="F")+
-  theme_bw()+
-  theme(axis.text.x = element_text(angle = 90, 
-                                   hjust = 1))+
-  xlim(0,10)+
-  xlab("Longitud (cm.)")+
-  ylab("")
-jz
-```
 
 
 First thing is get different rater layer to join krill data length
@@ -215,35 +184,21 @@ ssmap
 
 Length composition by Strata CCAMLR to visualization first. First step is group data into to poligons strata.
 
-```{r wranlingdata}
+```{r eval=FALSE}
 strata <- st_make_valid(strata)
 sf4 <- st_join(strata, ohbio6)
+# Save an object to a file
+saveRDS(sf4, file = "sf4.rds")
+
 ```
 
-
-Calculating the proportion of records per year and per stratum in a table. This table allows us to establish criteria for defining the strata on which we will analyze krill parameter. We leave out just `JOIN`.
-
-
+Load RData
 ```{r}
-# Calcular la proporción
-proporcion <- (round(table(sf5$ID) / sum(table(sf5$ID))*100,2))
-
-# Crear una tabla con las proporciones
-tabla_proporcion <- as.data.frame(proporcion)
-tabla_proporcion$Categoria <- rownames(tabla_proporcion)
-rownames(tabla_proporcion) <- NULL
-
-# Renombrar las columnas
-colnames(tabla_proporcion) <- c("Strata", "%")
-
-# Mostrar la tabla utilizando kbl()
-kbl(tabla_proporcion, 
-    caption = "Proportion length register by Strata")  |> 
-  kable_classic(full_width = F, 
-                html_font = "Cambria") |> 
-  kable_styling(bootstrap_options = "striped", 
-                latex_options = "striped")
+# Restore the object
+sf4 <- readRDS("sf4.rds")
 ```
+
+
 
 ## Data
 
@@ -291,155 +246,552 @@ sf5 <- sf4 |>
   data.frame()
 ```
 
-Some exploration in R-L relationship.
+
+
+Calculating the proportion of records per year and per stratum in a table. This table allows us to establish criteria for defining the strata on which we will analyze krill parameter. We leave out just `JOIN`.
+
 
 ```{r}
-cols <- c("M" = "darkgreen", "F" = "orange")
-RL <- ggplot(sf5 %>% 
-               filter(sex_code %in% c("M", "F"),
-                      greenweight_kg<0.004),
-             aes(x=length_total_cm,
-                  y=greenweight_kg,
-             colour=sex_code),
-             alpha=0.3)+
-  geom_point()+
-  stat_smooth(method = "lm", formula = y~poly(x,2), 
-              fullrange = TRUE) + 
-  scale_colour_manual(values=cols,
-                      name="Sex")+
-  facet_grid(.~ID)+
-  theme_few()
-RL
-```
+# Calcular la proporción
+proporcion <- (round(table(sf5$ID) / sum(table(sf5$ID))*100,2))
 
+# Crear una tabla con las proporciones
+tabla_proporcion <- as.data.frame(proporcion)
+tabla_proporcion$Categoria <- rownames(tabla_proporcion)
+rownames(tabla_proporcion) <- NULL
+
+# Renombrar las columnas
+colnames(tabla_proporcion) <- c("Strata", "%")
+
+# Mostrar la tabla utilizando kbl()
+kbl(tabla_proporcion, 
+    caption = "Proportion length register by Strata")  |> 
+  kable_classic(full_width = F, 
+                html_font = "Cambria") |> 
+  kable_styling(bootstrap_options = "striped", 
+                latex_options = "striped")
+```
 
 ## Parameters estimation `k` and `L_inf_`
 
+### Method `ELEFAN` 
+
+(@Tobias2017)
+
+
 ```{r}
 sf5fil <- sf5 |>
-  filter(Year>2015,
-         ID %in% c("BS", "EI", "GERLASHE", "SSIW")) |>  
+  filter(ID %in% c("BS", "EI", "GERLASHE", "SSIW")) |>  
   mutate(date_catchperiod_start = as.Date(date_catchperiod_start)) |>  
- mutate(monthly_Group = floor_date(date_catchperiod_start, "month")) |>   # New column
+  mutate(yearly_Group = floor_date(date_catchperiod_start, "year")) |>   # New column
   drop_na(length_total_cm) 
+
+# Definir los nombres correspondientes a cada objeto lfq_results
+nombres <- c("SSI", "BS", "GERLASHE", "EI")
 # Crear una lista para almacenar los resultados de cada ID
 lfq_results <- list()
 # Iterar sobre cada ID
 for (id in unique(sf5fil$ID)) {
+  # Obtener el nombre correspondiente
+  nombre <- nombres[which(unique(sf5fil$ID) == id)]
   # Filtrar los datos para el ID actual
   df_id <- sf5fil %>% filter(ID == id)
   # Crear un objeto lfq para el ID actual
   lfq <- lfqCreate(data = df_id,
                    Lname = "length_total_cm",
-                   Dname = "monthly_Group",
+                   Dname = "yearly_Group",
                    bin_size = 0.1)
   # Agregar el resultado a la lista
   lfq_results[[id]] <- lfq
-    # Graficar el objeto lfq
-  plot(lfq, Fname = "catch")
+  # Graficar el objeto lfq
+  plot(lfq, Fname = "catch",
+       main = nombre)
 }
+
 ```
+Identified distribution
 
+```{r message=FALSE}
 
+ei <- Bhattacharya(lfq_results$EI)
+ss <- Bhattacharya(lfq_results$SSIW)
+bs <- Bhattacharya(lfq_results$BS)
+gs <- Bhattacharya(lfq_results$GERLASHE)
+
+```
+ahora damos asignaciones a curvas para representación
 
 ```{r}
-# Crear una lista para almacenar los resultados de Powell-Wetherall
-PW_results <- list()
+# Crear una lista para almacenar los resultados de PW_results <- list()
+
+# Definir los nombres correspondientes a cada objeto lfq_results
+nombres <- c("SSI", "BS", "GERLASHE", "EI")
+
 # Iterar sobre cada objeto lfq almacenado en lfq_results
-for (lfq in lfq_results) {
+for (i in seq_along(lfq_results)) {
+  lfq <- lfq_results[[i]]
+  
+  # Obtener el nombre correspondiente
+  nombre <- nombres[i]
+  
   # Restructurar el objeto lfq
   lfqbin <- lfqRestructure(lfq, MA = 3, addl.sqrt = TRUE)
-    # Graficar el objeto lfq reestructurado
+  
+  # Graficar el objeto lfq reestructurado
   plot(lfqbin, hist.col = c("white", "black"),
        image.col = c(rep(rgb(1,0.8,0.8),1000), "white", 
                      rep(rgb(0.8,0.8,1),1000)),
-       ylim = c(0,max(lfqbin$midLengths+0.5)))
-    # Ajustar curvas al objeto lfq reestructurado
+       ylim = c(0,max(lfqbin$midLengths+0.5)),
+       main = nombre)
+  
+  # Ajustar curvas al objeto lfq reestructurado
   tmp <- lfqFitCurves(lfqbin, par = list(Linf=6.5, 
-                                         K=0.45, 
-                                         t_anchor=0.1),
+                                          K=0.45,
+                                          t_anchor=0.5),
                       draw = TRUE, col=4, lty=2)
-    # Calcular los intervalos de confianza de L_inf usando Powell-Wetherall
-  PW <- powell_wetherall(lfqbin, catch_columns = 1:7, reg_int = c(2,9))
-    # Almacenar los resultados de Powell-Wetherall en la lista PW_results
-  PW_results[[length(PW_results) + 1]] <- PW$Linf_est
 }
-```
-```{r}
-lfqbin2 <- ELEFAN(
-  lfq = lfq_results$SSIW,  MA = 7,
-  Linf_range = seq(4.5, 7, length.out = 30),
-  K_range = exp(seq(log(0.1),log(2), length.out = 30)),
-  method = "cross",
-  cross.date = lfq_results$SSIW$dates[3],
-  cross.midLength = lfq_results$SSIW$midLengths[5],
-  contour = TRUE, 
-  add.values = FALSE,
-  plot = TRUE,
-  agemax = 5,
-  hide.progressbar = TRUE # change to 'TRUE' to follow algorithm's progression
-)
-points(lfqbin2$par["Linf"], lfqbin2$par["K"], pch="*", cex=2, col=2)
+
 ```
 
 
-```{r}
-unlist(lfqbin2$par)
-```
 
+Proceed to fit Modal Progression analysis with `ELEFAN`
+
+#### Parameters to `SSIW`
 
 ```{r}
 # Response surface analyss
-res_RSA <- ELEFAN(lfq_results$EI , Linf_range = seq(4,6.5,1), MA = 5,
-                  K_range = seq(0.01,2,0.1), addl.sqrt = TRUE,
-                  hide.progressbar = TRUE, contour=5,
-                  plot=TRUE)
+res_RSAsswi <- ELEFAN(lfq = lfq_results$SSIW,  
+                  MA = 5,
+                  Linf_range = seq(4.5, 7, 
+                                   length.out = 30),
+                  K_range = exp(seq(log(0.1),
+                                    log(2),
+                                    length.out = 30)),
+                  C = 0.5,
+                  ts = 0.5,
+                  method = "cross",
+                  cross.date = lfq_results$SSIW$dates[3],
+                  cross.midLength = lfq_results$SSIW$midLengths[5],
+                  contour = TRUE,
+                  add.values = FALSE,
+                  agemax = 5,
+                  hide.progressbar = TRUE)
+```
 
-# show results
-res_RSA$par; res_RSA$Rn_max
 
-
-
-
+```{r}
 # run ELEFAN with simulated annealing
-res_SA <- ELEFAN_SA(lfq1new, SA_time = 60*0.5, SA_temp = 6e5,
-                    MA = 5, seasonalised = TRUE, addl.sqrt = TRUE,
-                    init_par = list(Linf = 6.0, 
+res_SAsswi <- ELEFAN_SA(lfq_results$SSIW, 
+                    SA_time = 60*0.5, 
+                    MA = 5, 
+                    agemax = 5,
+                    seasonalised = TRUE, addl.sqrt = TRUE,
+                    init_par = list(Linf = 4.5, 
                                     K = 0.5, 
                                     t_anchor = 0.5,
                                     C=0.5, 
                                     ts = 0.5),
-                    low_par = list(Linf = 5.5, K = 0.01, t_anchor = 0, C = 0, ts = 0),
-                    up_par = list(Linf = 6.5, K = 1, t_anchor = 1, C = 1, ts = 1))
-# show results
-res_SA$par; res_SA$Rn_max
-
-
-# run ELEFAN with genetic algorithm
-res_GA <- ELEFAN_GA(lfq1new, MA = 5, seasonalised = TRUE, maxiter = 10, 
-                    addl.sqrt = TRUE,
-                    low_par = list(Linf = 5.5, K = 0.01, t_anchor = 0, C = 0, ts = 0),
-                    up_par = list(Linf = 6.5, K = 1, t_anchor = 1, C = 1, ts = 1),
-                    monitor = FALSE)
-# show results
-res_GA$par; res_GA$Rn_max
+                    low_par = list(Linf = 4,
+                                   K = 0.01,
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5,
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1))
 ```
 
 
 ```{r}
-# plot LFQ and growth curves
-plot(res_RSA, Fname = "rcounts",date.axis = "modern", ylim=c(0,8))
-lt <- lfqFitCurves(res_RSA, par = list(Linf=7.0, K=0.2, 
-                                       t_anchor=0.25, C=2, ts=0),
-                   draw = TRUE, col = "grey", lty = 1, lwd=1.5)
-lt <- lfqFitCurves(lfq1new, par = res_SA$par,
-                   draw = TRUE, col = "blue", lty = 1, lwd=1.5)
-lt <- lfqFitCurves(lfq1new, par = res_GA$par,
-                   draw = TRUE, col = "lightblue", lty = 1, lwd=1.5)
+# run ELEFAN with genetic algorithm
+res_GAsswi <- ELEFAN_GA(lfq_results$SSIW, 
+                    MA = 5, 
+                    seasonalised = TRUE, 
+                    maxiter = 10, 
+                    agemax = 5,
+                    addl.sqrt = TRUE,
+                    low_par = list(Linf = 4.5, 
+                                   K = 0.01, 
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5, 
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1),
+                    monitor = FALSE)
+```
+
+Table with different method
+
+```{r}
+# show results
+RSAsswi <- unlist(res_RSAsswi$par)
+GAsswi <- unlist(res_GAsswi$par)
+SAsswi <- unlist(res_SAsswi$par)
+parsswi <- round(rbind(RSAsswi, GAsswi, SAsswi),3)
+
+parsswi %>%
+  kbl(booktabs = T,
+      position="ht!",
+    caption = "Parametres LH to SSWI") %>%
+  kable_paper("hover", 
+              full_width = F)%>%
+  kable_styling(latex_options = c("striped",
+                                  "condensed"),
+                full_width = FALSE,
+                font_size=11)
+
+```
+#### Parametrs to `EI`
+
+```{r}
+# Response surface analyss
+res_RSAei <- ELEFAN(lfq = lfq_results$EI,  
+                  MA = 5,
+                  Linf_range = seq(4.5, 7, 
+                                   length.out = 30),
+                  K_range = exp(seq(log(0.1),
+                                    log(2),
+                                    length.out = 30)),
+                  C = 0.5,
+                  ts = 0.5,
+                  method = "cross",
+                  cross.date = lfq_results$EI$dates[3],
+                  cross.midLength = lfq_results$EI$midLengths[5],
+                  contour = TRUE,
+                  add.values = FALSE,
+                  agemax = 5,
+                  hide.progressbar = TRUE)
+```
+
+
+```{r}
+# run ELEFAN with simulated annealing
+res_SAei <- ELEFAN_SA(lfq_results$EI, 
+                    SA_time = 60*0.5, 
+                    MA = 5, 
+                    agemax = 5,
+                    seasonalised = TRUE, addl.sqrt = TRUE,
+                    init_par = list(Linf = 4.5, 
+                                    K = 0.5, 
+                                    t_anchor = 0.5,
+                                    C=0.5, 
+                                    ts = 0.5),
+                    low_par = list(Linf = 4,
+                                   K = 0.01,
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5,
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1))
+```
+
+
+```{r}
+# run ELEFAN with genetic algorithm
+res_GAei <- ELEFAN_GA(lfq_results$EI, 
+                    MA = 5, 
+                    seasonalised = TRUE, 
+                    maxiter = 10, 
+                    agemax = 5,
+                    addl.sqrt = TRUE,
+                    low_par = list(Linf = 4.5, 
+                                   K = 0.01, 
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5, 
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1),
+                    monitor = FALSE)
+```
+
+```{r}
+# show results
+RSAei <- unlist(res_RSAei$par)
+GAei <- unlist(res_GAei$par)
+SAei <- unlist(res_SAei$par)
+parei <- round(rbind(RSAei, GAei, SAei),3)
+```
+
+
+```{r}
+parei %>%
+  kbl(booktabs = T,
+      position="ht!",
+    caption = "Parametres LH to Elephand Island") %>%
+  kable_paper("hover", 
+              full_width = F)%>%
+  kable_styling(latex_options = c("striped",
+                                  "condensed"),
+                full_width = FALSE,
+                font_size=9)
 
 ```
 
-gener
+#### Parametrs to `BS`
+
+```{r}
+# Response surface analyss
+res_RSAbs <- ELEFAN(lfq = lfq_results$BS,  
+                  MA = 5,
+                  Linf_range = seq(4.5, 7, 
+                                   length.out = 30),
+                  K_range = exp(seq(log(0.1),
+                                    log(2),
+                                    length.out = 30)),
+                  C = 0.5,
+                  ts = 0.5,
+                  method = "cross",
+                  cross.date = lfq_results$BS$dates[3],
+                  cross.midLength = lfq_results$BS$midLengths[5],
+                  contour = TRUE,
+                  add.values = FALSE,
+                  agemax = 5,
+                  hide.progressbar = TRUE)
+```
+
+
+```{r}
+# run ELEFAN with simulated annealing
+res_SAbs <- ELEFAN_SA(lfq_results$BS, 
+                    SA_time = 60*0.5, 
+                    MA = 5, 
+                    agemax = 5,
+                    seasonalised = TRUE, addl.sqrt = TRUE,
+                    init_par = list(Linf = 4.5, 
+                                    K = 0.5, 
+                                    t_anchor = 0.5,
+                                    C=0.5, 
+                                    ts = 0.5),
+                    low_par = list(Linf = 4,
+                                   K = 0.01,
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5,
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1))
+```
+
+
+```{r}
+# run ELEFAN with genetic algorithm
+res_GAbs <- ELEFAN_GA(lfq_results$BS, 
+                    MA = 5, 
+                    seasonalised = TRUE, 
+                    maxiter = 10, 
+                    agemax = 5,
+                    addl.sqrt = TRUE,
+                    low_par = list(Linf = 4.5, 
+                                   K = 0.01, 
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5, 
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1),
+                    monitor = FALSE)
+```
+
+```{r}
+# show results
+RSAbs <- unlist(res_RSAbs$par)
+GAbs <- unlist(res_GAbs$par)
+SAbs <- unlist(res_SAbs$par)
+parbs <- round(rbind(RSAbs, GAbs, SAbs),3)
+
+parbs %>%
+  kbl(booktabs = T,
+      position="ht!",
+    caption = "Parametres LH to BRANSFIELD STRAIT") %>%
+  kable_paper("hover", 
+              full_width = F)%>%
+  kable_styling(latex_options = c("striped",
+                                  "condensed"),
+                full_width = FALSE,
+                font_size=9)
+
+```
+
+#### Parametrs to `GERLASHE`
+
+```{r}
+# Response surface analyss
+res_RSAgs <- ELEFAN(lfq = lfq_results$GERLASHE,  
+                  MA = 5,
+                  Linf_range = seq(4.5, 7, 
+                                   length.out = 30),
+                  K_range = exp(seq(log(0.1),
+                                    log(2),
+                                    length.out = 30)),
+                  C = 0.5,
+                  ts = 0.5,
+                  method = "cross",
+                  cross.date = lfq_results$GERLASHE$dates[3],
+                  cross.midLength = lfq_results$GERLASHE$midLengths[5],
+                  contour = TRUE,
+                  add.values = FALSE,
+                  agemax = 5,
+                  hide.progressbar = TRUE)
+```
+
+
+```{r}
+# run ELEFAN with simulated annealing
+res_SAgs <- ELEFAN_SA(lfq_results$GERLASHE, 
+                    SA_time = 60*0.5, 
+                    MA = 5, 
+                    agemax = 5,
+                    seasonalised = TRUE, addl.sqrt = TRUE,
+                    init_par = list(Linf = 4.5, 
+                                    K = 0.5, 
+                                    t_anchor = 0.5,
+                                    C=0.5, 
+                                    ts = 0.5),
+                    low_par = list(Linf = 4,
+                                   K = 0.01,
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5,
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1))
+```
+
+
+```{r}
+# run ELEFAN with genetic algorithm
+res_GAgs <- ELEFAN_GA(lfq_results$GERLASHE, 
+                    MA = 5, 
+                    seasonalised = TRUE, 
+                    maxiter = 10, 
+                    agemax = 5,
+                    addl.sqrt = TRUE,
+                    low_par = list(Linf = 4.5, 
+                                   K = 0.01, 
+                                   t_anchor = 0, 
+                                   C = 0, 
+                                   ts = 0),
+                    up_par = list(Linf = 6.5, 
+                                  K = 1, 
+                                  t_anchor = 1,
+                                  C = 1, ts = 1),
+                    monitor = FALSE)
+```
+
+```{r}
+# show results
+RSAgs <- unlist(res_RSAgs$par)
+GAgs <- unlist(res_GAgs$par)
+SAgs <- unlist(res_SAgs$par)
+pargs <- round(rbind(RSAgs, GAgs, SAgs),3)
+
+pargs %>%
+  kbl(booktabs = T,
+      position="ht!",
+    caption = "Parametres LH to GERLASHE") %>%
+  kable_paper("hover", 
+              full_width = F)%>%
+  kable_styling(latex_options = c("striped",
+                                  "condensed"),
+                full_width = FALSE,
+                font_size=9)
+
+```
+
+### Method NO LINEAR MODEL 
+
+
+We use firts a descomposition methot with library `mixR` and then we use `nlmer` (@Bates2015) to calcularte parametrs
+
+```{r eval=FALSE}
+
+
+# Agregar la nueva columna con los intervalos de longitud total
+sf6 <- sf5 |> 
+  drop_na(length_total_cm) |> 
+  filter(ID %in% "GERLASHE",
+         Year==2018,
+         Month==5)
+
+sf5a <-  sf5 |> 
+  drop_na(length_total_cm ) |> 
+  filter(ID %in% "BS",
+         Year==2018)
+  
+# compruebo el n de comp
+
+s_weibull = select(sf5a$length_total_cm, ncomp = 2:6, family = 'weibull')
+
+s_normal = select(sf5a$length_total_cm, ncomp = 2:6)
+
+
+
+
+# fit a Normal mixture model
+mod1 = mixfit(sf5a$length_total_cm, ncomp = 4,
+              pi = c(0.5, 0.5, 0.5, 0.5), 
+              mu = c( 3, 4, 5, 6), 
+              sd = c(0.2, 0.2, 0.2, 0.2))
+mod2_weibull = mixfit(sf6$length_total_cm, family = 'weibull', ncomp = 3)
+
+s_weibull = select(sf5a$length_total_cm, ncomp = 2:6, family = 'weibull')
+
+s_normal = select(sf5a$length_total_cm, ncomp = 2:6)
+plot(s_weibull)
+plot(s_normal)
+
+# plot the fitted model# plot the fitted model# plot the fitted model
+plot(mod1)
+plot(mod2_weibull)
+
+# fit a Normal mixture model (equal variance)
+mod1_ev = mixfit(sf6$length_total_cm, ncomp = 2, ev = TRUE)
+
+```
+
+## Natural Mortality
+
+In this exercises different bioanalogic methods are tested
+```{r}
+lfq_results$EI <- c(lfq_list, sa_res1$par, list(agemax = sa_res1$agemax))
+
+# use the function M_empirical to estimate natural mortality
+Ms <- M_empirical(Linf = lfq_list2$Linf, K_l = lfq_list2$K, 
+                  tmax = lfq_list2$agemax, temp = 20.2, 
+                  method = c("Pauly_Linf", "Hoenig", 
+                             "Then_tmax", "Then_growth"))
+
+# True M: 0.2
+# take mean and standard deviation of the M estimates
+print(paste(round(mean(as.numeric(Ms)),3), "±", round(sd(as.numeric(Ms)),3)))
+# add the mean value to our data list
+lfq_list2$M <- mean(as.numeric(Ms))
+# alternativly use only Then_growth method:
+lfq_list2$M <- Ms[5]
+# M = 0.365
+
+```
+
+```{r}
+M_empirical(Linf = 5.8, 
+            K_l = 0.63, 
+            temp = 5, tmax = 6,
+     method = c("Pauly_Linf","Hoenig",
+                "AlversonCarney",
+                "Then_tmax" ))
+```
+
 
 # References
 
