--- a/param.bib
+++ b/param.bib
@@ -132,3 +132,20 @@ title = {{Generalised R Yield Model (Grym)}},
 url = {https://www.ccamlr.org/en/system/files/meeting{\_}documents/with{\_}cover/sc-39-bg-19.pdf},
 year = {2020}
 }
+ @Article{Bates2015,
+    title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+    author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
+    journal = {Journal of Statistical Software},
+    year = {2015},
+    volume = {67},
+    number = {1},
+    pages = {1--48},
+    doi = {10.18637/jss.v067.i01},
+  }
+@Manual{Yu2021,
+    title = {mixR: Finite Mixture Modeling for Raw and Binned Data},
+    author = {Youjiao Yu},
+    year = {2021},
+    note = {R package version 0.2.0},
+    url = {https://CRAN.R-project.org/package=mixR},
+  }
